@@ -262,6 +262,7 @@ public:
     eTeam* NextTeam()    const { return nextTeam; }				// return the team I will be next round
     eTeam* CurrentTeam() const { return currentTeam; }		// return the team I am in
     int  TeamListID() const { return teamListID; }		// return my position in the team
+    void SetShuffleWish( int pos ); 	                 //!< sets a desired team position
     void FindDefaultTeam();									// look for a good default team for us
     void SetTeamForce(eTeam* team );                 	// register me in the given team without checks
     void SetTeam(eTeam* team);          	// register me in the given team (callable on the server)
